service/tests/models/snapshots/roles/when_seed_file_does_not_exist_role_seeding_fails@roles.snap
---
source: tests/models/roles.rs
assertion_line: 119
expression: result
---
Err(
    FileNotFound,
)
